@@ -331,7 +331,7 @@ function advanced_forum_preprocess_advanced_forum_statistics(&$variables) {
   $authenticated_users = advanced_forum_statistics_online_users();
   $variables['online_users'] = implode(', ', $authenticated_users);
   $variables['current_users'] = advanced_forum_session_count(FALSE);
-  $variables['current_guests'] = advanced_forum_session_count(TRUE);
+  $variables['current_guests'] = 0; // for backwards compatibility
   $variables['current_total'] = $variables['current_users'] + $variables['current_guests'];
 
   $latest_users = advanced_forum_statistics_latest_users();
